<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>embedded_object_detection_pi5</name>
  <version>0.0.0</version>
  <description>Minimal ROS2-C project for camera capture and display using V4L2 and SDL2</description>
  <maintainer email="florian2richter@gmail.com">Florian Richter</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>libsdl2-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 