<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>display_camera</name>
  <version>0.0.0</version>
  <description>Pure C ROS 2 package for displaying camera images using OpenCV</description>
  <maintainer email="your.email@example.com">Florian Richter</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>libsdl2-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 